# moo

./: .gitignore  CMakeLists.txt  README.md  build.zig
src/: store.cpp  trie.cpp  trie.h
test/: store_test.cpp
